--- a/app/src/main/res/layout/activity_streaming.xml
+++ b/app/src/main/res/layout/activity_streaming.xml
@@ -5,17 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    tools:context=".HomeActivity">
-
-    <!--    Navigation bar-->
+    tools:context=".StreamingActivity">
 
     <TextView
-        android:id="@+id/welcome"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="39dp"
-        android:text="Welcome to home"
+        android:text="STREAMING"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,6 +30,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
+
 <!--    <androidx.fragment.app.FragmentContainerView-->
 <!--        android:id="@+id/nav_host"-->
 <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
@@ -42,6 +40,8 @@
 <!--        app:layout_constraintRight_toRightOf="parent"-->
 <!--        app:layout_constraintTop_toTopOf="parent"-->
 <!--        app:navGraph="@navigation/mobile_navigation" />-->
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
