--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,23 +8,25 @@
     android:background="@color/background"
     tools:context=".HomeActivity">
 
-    <TextView
-        android:id="@+id/welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="39dp"
-        android:text="Welcome to home"
+    <!--    Navigation bar-->
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="241dp"
+        android:layout_height="64dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="54dp"
+        android:contentDescription="donona_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_text" />
 
-    <!--    Navigation bar-->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
         android:background="#ffebc9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -32,5 +34,105 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:id="@+id/textInputLayout"-->
+<!--        android:layout_width="342dp"-->
+<!--        android:layout_height="25dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.6"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/imageView">-->
+
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+
+<!--            android:hint="Search" />-->
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rowCount="2"
+        android:columnCount="4"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        >
+        <ImageButton
+            android:id="@+id/near_me"
+            android:contentDescription="hello"
+            android:layout_marginLeft="10dp"
+            android:minHeight="50dp"
+            android:layout_column="0"
+            android:layout_row="0"
+            android:src="@drawable/near_me_24px"
+            android:onClick="onClickNearMe"
+            />
+        <ImageButton
+            android:id="@+id/map"
+            android:contentDescription="hello"
+            android:layout_marginLeft="10dp"
+            android:minHeight="50dp"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:src="@drawable/map_24px"
+            />
+        <ImageButton
+            android:id="@+id/upgrade"
+            android:contentDescription="hello"
+            android:layout_marginLeft="10dp"
+            android:minHeight="50dp"
+            android:layout_column="2"
+            android:layout_row="0"
+            android:src="@drawable/sports_esports_24px"
+            />
+        <ImageButton
+            android:id="@+id/bookmark"
+            android:contentDescription="hello"
+            android:layout_marginLeft="10dp"
+            android:minHeight="50dp"
+            android:layout_column="3"
+            android:layout_row="0"
+            android:src="@drawable/sports_esports_24px"
+            />
+        <ImageButton
+            android:id="@+id/blog"
+            android:contentDescription="hello"
+            android:layout_marginLeft="10dp"
+            android:minHeight="50dp"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:src="@drawable/sports_esports_24px"
+            />
+        <ImageButton
+            android:id="@+id/promotion"
+            android:contentDescription="hello"
+            android:layout_marginLeft="10dp"
+            android:minHeight="50dp"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:src="@drawable/sports_esports_24px"
+            />
+        <ImageButton
+            android:id="@+id/suggest"
+            android:contentDescription="hello"
+            android:layout_marginLeft="10dp"
+            android:minHeight="50dp"
+            android:layout_column="2"
+            android:layout_row="1"
+            android:src="@drawable/sports_esports_24px"
+            />
+        <ImageButton
+            android:id="@+id/game"
+            android:contentDescription="hello"
+            android:layout_marginLeft="10dp"
+            android:minHeight="50dp"
+            android:layout_column="3"
+            android:layout_row="1"
+            android:src="@drawable/sports_esports_24px"
+            />
+
+    </GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
