--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -77,6 +77,7 @@
             android:layout_column="1"
             android:layout_row="0"
             android:src="@drawable/map_24px"
+            android:onClick="onClickSearchPlace"
             />
         <ImageButton
             android:id="@+id/upgrade"
