--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#ffebc9</color>
     <color name="red">#ff0000</color>
+    <color name="blue">#0000ff</color>
 </resources>
