--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,25 +32,73 @@
 
         <ImageButton
             android:id="@+id/imageButton"
-            android:layout_width="143dp"
-            android:layout_height="143dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:background="@drawable/rounded_button"
             android:layout_margin="10dp"/>
 
+        <!--        User profile here-->
         <GridLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:rowCount="3"
+            android:rowCount="2"
             android:columnCount="2"
             >
-<!--            <Button-->
-<!--                android:text="Hello world"-->
-<!--                ></Button>-->
+            <com.google.android.material.textview.MaterialTextView
+                android:text="Username"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_columnWeight="0.05"
+                />
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:hint="User name here"
+                android:layout_column="1"
+                android:layout_row="0"
+                android:layout_columnWeight="0.9"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/username_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:text="Email"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_columnWeight="0.05"
+                />
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                android:hint="Email here"
+                android:layout_column="1"
+                android:layout_row="1"
+                android:layout_columnWeight="0.9"
+                >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email_profile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </com.google.android.material.textfield.TextInputLayout>
         </GridLayout>
-
-
-
         <!--        <Button-->
 <!--            android:layout_width="wrap_content"-->
 <!--            android:layout_height="wrap_content"-->
@@ -58,16 +106,20 @@
 <!--            android:text="@string/edit_avatar"-->
 <!--            />-->
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Change your life here"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+
+            />
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             app:srcCompat="@drawable/logo"
             />
-
-
-
-
 
     </LinearLayout>
 
