--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="background">#ffebc9</color>
     <color name="red">#ff0000</color>
     <color name="blue">#0000ff</color>
+    <color name="text">#643120</color>
 </resources>
