--- a/app/src/main/res/layout/activity_viet_map_map_view.xml
+++ b/app/src/main/res/layout/activity_viet_map_map_view.xml
@@ -61,6 +61,14 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     >
+                    <ImageButton
+                        android:id="@+id/startNavigation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/near_me_24px"
+                        android:onClick="startNavigation"
+                        />
+
                     <TextView
                         android:id="@+id/place_name"
                         android:layout_width="wrap_content"
@@ -78,6 +86,7 @@
                         android:text="Address in Afterlife"
                         android:textSize="20dp"
                         />
+
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
