--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -67,7 +67,6 @@
             android:layout_column="0"
             android:layout_row="0"
             android:src="@drawable/near_me_24px"
-            android:onClick="onClickNearMe"
             />
         <ImageButton
             android:id="@+id/map"
@@ -77,7 +76,7 @@
             android:layout_column="1"
             android:layout_row="0"
             android:src="@drawable/map_24px"
-            android:onClick="onClickSearchPlace"
+            android:onClick="onClickNearMe"
             />
         <ImageButton
             android:id="@+id/upgrade"
@@ -104,7 +103,8 @@
             android:minHeight="50dp"
             android:layout_column="0"
             android:layout_row="1"
-            android:src="@drawable/sports_esports_24px"
+            android:src="@drawable/post_add_24px"
+            android:onClick="onClickPost"
             />
         <ImageButton
             android:id="@+id/promotion"
