--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,7 +53,7 @@
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:rowCount="2"
+        android:rowCount="3"
         android:columnCount="4"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintRight_toRightOf="parent"
@@ -123,6 +123,7 @@
             android:layout_column="2"
             android:layout_row="1"
             android:src="@drawable/sports_esports_24px"
+            android:onClick="onClickSuggest"
             />
         <ImageButton
             android:id="@+id/game"
