--- a/app/src/main/res/layout/activity_blog_post.xml
+++ b/app/src/main/res/layout/activity_blog_post.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Blog"
+            android:text="@string/blog"
             android:textStyle="bold"
             android:textSize="30dp"
             android:layout_marginLeft="30dp"
