--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -47,7 +47,7 @@
             android:columnCount="2"
             >
             <com.google.android.material.textview.MaterialTextView
-                android:text="Username"
+                android:text="@string/username_label"
                 android:layout_marginRight="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_row="0"
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:layout_marginLeft="5dp"
-                android:hint="User name here"
+                android:hint="@string/username_hint"
                 android:layout_column="1"
                 android:layout_row="0"
                 android:layout_columnWeight="0.9"
@@ -74,7 +74,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textview.MaterialTextView
-                android:text="Email"
+                android:text="@string/email"
                 android:layout_marginRight="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_row="1"
@@ -87,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:layout_marginLeft="5dp"
-                android:hint="Email here"
+                android:hint="@string/email_hint"
                 android:layout_column="1"
                 android:layout_row="1"
                 android:layout_columnWeight="0.9"
@@ -112,7 +112,7 @@
             android:id="@+id/update_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Update"
+            android:text="@string/update"
             android:layout_margin="10dp"
             android:layout_gravity="center"
 
