--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Log out"
+            android:text="@string/log_out"
             android:onClick="logout"
             />
 
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Play Music" />
+            android:text="@string/play_music" />
 
         <Button
             android:id="@+id/openBrowserButton"
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Dark Mode"
+            android:text="@string/dark_mode"
             android:textSize="20sp"
             android:scaleX="1.5"
             android:scaleY="1.5"
