--- a/app/src/main/res/layout/activity_subscription.xml
+++ b/app/src/main/res/layout/activity_subscription.xml
@@ -31,7 +31,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Upgrade your Account"
+            android:text="@string/upgrade_your_account"
             android:textStyle="bold"
             android:textSize="30dp"
             android:layout_marginLeft="30dp"
@@ -52,7 +52,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Free Tier"/>
+                    android:text="@string/free_tier"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -62,14 +62,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:text="Basic"
+                        android:text="@string/basic"
                         android:textSize="50dp"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:text="Searching store \n Rating \n Bookmark \n Arcade game"
+                        android:text="@string/basic_features"
                         />
                 </LinearLayout>
             </LinearLayout>
@@ -90,7 +90,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="30.000$"/>
+                    android:text="@string/standard_price"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -100,14 +100,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:text="Standard"
+                        android:text="@string/standard"
                         android:textSize="50dp"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:text="Searching store Pro \n Rating Pro \n Bookmark Pro \n Arcade game Pro \n No ads Pro"
+                        android:text="@string/standard_features"
                         />
                 </LinearLayout>
                 <Button
@@ -115,7 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="Buy Standard"
+                    android:text="@string/buy_standard"
                     />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -124,7 +124,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Checkout"/>
+            android:text="@string/checkout"/>
 
 
 
