--- a/app/src/main/res/layout/item_coffee_place.xml
+++ b/app/src/main/res/layout/item_coffee_place.xml
@@ -21,7 +21,7 @@
         android:id="@+id/coffee_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Coffee Shop Name"
+        android:text="@string/coffee_shop_name"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
